artifacts/BNFParser_jar/bnf.txt
Program: DiffSolv1.0

Equations:
Susc/dt = -A * Susc * Sick;
Sick/dt = A * Susc * Sick - (B + C) * Sick;
Cured/dt = B * Sick;

BeginConditions:
Susc = 620;
Sick = 10;
Cured = 70;
A = 0.001;
B = 0.07;
C = 0.01;

IntegrationConditions:
method = Euler;
t = 50;
dt = 0.5;
